--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div class="container mt-5">
+    <div class="fcont mt-5">
         <div class="row p-3">
             <div class="col-md-6 bottomBorder">
                 <h2 class="pb-5 pt-3">&gt&gt&gtGET IN TOUCH</h2>
@@ -36,7 +36,7 @@
 
             <div class="col-md-6 topBorder">
 
-                <img src="Techtable Logo.png" alt="Logo" class="pb-2">
+                <img src="./Techtable Logo.png" alt="Logo" class="pb-2">
 
                 <div class="isRight">
                     <div>
